--- a/README.adoc
+++ b/README.adoc
@@ -132,20 +132,20 @@ The default value is "normal".
 | No
 | The user to whom the change request ticket must be assigned in the assignment group.
 
-| `validate-change-freeze-conflict`
+| `validate-blackout-window-conflict`
 | Boolean
 | No
-| Whether to check the freeze window conflict.
+| Whether to check if there is a blackout window conflict.
 The default value is false.
 
 | `planned-start-date`
 | String
-| Required if `validate-change-freeze-conflict` is true.
+| Required if `validate-blackout-window-conflict` is true.
 | The scheduled start date and time of the change request, formatted as `yyyy-mm-dd hh:mm:ss`.
 
 | `planned-end-date`
 | String
-| Required if `validate-change-freeze-conflict` is true.
+| Required if `validate-blackout-window-conflict` is true.
 | The scheduled end date and time of the change request, formatted as `yyyy-mm-dd hh:mm:ss`.
 
 | `additional-parameters`
@@ -203,23 +203,23 @@ The following is an example payload for creating a change request using basic au
 
 ----
 
-=== Check for change freezes
+=== Check for a blackout window
 
-If the parameter `validate-change-freeze-conflict` is set to true, the action performs an additional check before creating the change request.
+If the parameter `validate-blackout-window-conflict` is set to true, the action performs an additional check before creating the change request.
 
 When this parameter is set to true, you must input both planned start and end dates and times.
-The action checks ServiceNow for configuration of a change freeze window during the planned start and end dates provided in the change request.
+The action checks ServiceNow for configuration of a blackout window during the planned start and end dates provided in the change request.
 
-* If a change freeze exists during the scheduled dates, then the action fails and the change request is not created.
-* If no change freeze conflict is detected, the action then proceeds to create the change request.
+* If a blackout window exists during the scheduled dates, then the action fails and the change request is not created.
+* If no blackout window conflict is detected, the action then proceeds to create the change request.
 
-The following is an example payload for creating a change request using OAuth-based authentication and checking for any change freezes within the planned change request start and end dates:
+The following is an example payload for creating a change request using OAuth-based authentication and checking for any blackout windows within the planned change request start and end dates:
 
 [source,yaml,role="default-expanded"]
 ----
 
     steps:
-      - name: Create ServiceNow CR and check for change freeze
+      - name: Create ServiceNow CR and check for blackout window
         uses: cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
@@ -229,8 +229,8 @@ The following is an example payload for creating a change request using OAuth-ba
           client-secret: ${{ secrets.MY_CLIENT_SECRET }}
           action-type: create
           cr-type: Normal
-          short-description: 'check for change freeze'
-          validate-change-freeze-conflict: true
+          short-description: 'check for blackout window'
+          validate-blackout-window-conflict: true
           planned-start-date: "2025-03-06 17:00:00"
           planned-end-date: "2025-03-06 17:59:59"
 
