--- a/README.adoc
+++ b/README.adoc
@@ -236,7 +236,7 @@ The following is an example payload for creating a change request using OAuth-ba
 
 ----
 
-NOTE: Times specified in `planned-start-date` and `planned-end-date` are evaluated to be in the time zone set in your link:https://docs.cloudbees.com/docs/cloudbees-platform/latest/teams-users/users#user-profile[user profile].
+NOTE: Times specified in `planned-start-date` and `planned-end-date` fields are evaluated to be in the UTC time zone by default. If time zone is configured in SNOW Instance, then the fields are evaluated to be in the configured time zone.
 
 == Update or close a change request
 
