--- a/README.adoc
+++ b/README.adoc
@@ -205,6 +205,7 @@ The following is an example payload for creating a change request using basic au
 
     steps:
       - name: Create ServiceNow CR with basic auth
+        id: create_cr
         uses: cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
@@ -224,6 +225,7 @@ The following is an example payload for creating a change request using basic au
 
     steps:
       - name: Create ServiceNow CR with manual trigger
+        id: create_cr
         uses: cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
@@ -253,6 +255,7 @@ The following is an example payload for creating a change request using OAuth-ba
 
     steps:
       - name: Create ServiceNow CR and check for blackout window
+        id: create_cr
         uses: cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
@@ -449,6 +452,26 @@ The following is an example payload for updating a change request using basic au
           risk: "Low"
           additional-parameters : '{"risk_impact_analysis":"Describe the risks here","implementation_plan": "Describe the implementation plan here"}'
 ----
+
+The following is an example refering to output parameter sys_id from create  as input in update step:
+
+[source,yaml,role="default-expanded"]
+----
+      - name: Update ServiceNow CR with basic auth
+        uses: cloudbees-io/service-now@v1
+        with:
+          url: ${{ vars.SERVICENOW_URL }}
+          username: ${{ secrets.MY_SERVICENOW_USERNAME }}
+          password: ${{ secrets.MY_SERVICENOW_PASSWORD }}
+          action-type: "update"
+          sys-id: ${{ fromJSON(steps.create_cr.outputs.servicenow_output).sys_id }
+          description: "Updated description from CBP workflow"
+          priority: "3 - Moderate"
+          risk: "Low"
+          additional-parameters : '{"risk_impact_analysis":"Describe the risks here","implementation_plan": "Describe the implementation plan here"}'
+----
+
+
 === Usage example: Closing
 
 The following is an example payload for closing a change request:
@@ -470,6 +493,27 @@ The following is an example payload for closing a change request:
           close-notes: "Change request closed in successful state"
 
 ----
+
+The following is an example refering to output parameter sys_id from create  as input in update step:
+
+[source,yaml,role="default-expanded"]
+----
+      - name: Close ServiceNow CR with mandatory close fields
+        uses: cloudbees-io/service-now@v1
+        with:
+          url: ${{ vars.SERVICENOW_URL }}
+          username: ${{ vars.MY_SERVICENOW_USERNAME }}
+          password: ${{ secrets.MY_SERVICENOW_PASSWORD }}
+          client-id: ${{ secrets.MY_CLIENT_ID }}
+          client-secret: ${{ secrets.MY_CLIENT_SECRET }}
+          action-type: "update"
+          sys-id: ${{ fromJSON(steps.create_cr.outputs.servicenow_output).sys_id }
+          state: "close"
+          close-code: "successful"
+          close-notes: "Change request closed in successful state"
+
+----
+
 
 [NOTE]
 ====
@@ -583,6 +627,23 @@ The following is an example payload with basic authentication to get the current
           password: ${{ secrets.MY_SERVICENOW_PASSWORD }}
           action-type: "get"
           cr-number: "Unique ServiceNow-generated number"
+
+----
+
+The following is an example refering to output parameter sys_id from create  as input in Get step:
+
+[source,yaml,role="default-expanded"]
+----
+
+    steps:
+      - name: Get ServiceNow CR state with basic auth
+        uses: cloudbees-io/service-now@v1
+        with:
+          url: ${{ vars.SERVICENOW_URL }}
+          username: ${{ vars.MY_SERVICENOW_USERNAME }}
+          password: ${{ secrets.MY_SERVICENOW_PASSWORD }}
+          action-type: "get"
+          cr-number: ${{ fromJSON(steps.create_cr.outputs.servicenow_output).number }
 
 ----
 
