--- a/README.adoc
+++ b/README.adoc
@@ -64,7 +64,7 @@ Inputs for the create change request functionality are listed below.
 | `password`
 | String
 | Yes
-| The password for authentication.
+| The password used for authentication.
 
 | `client-id`
 | String
@@ -179,11 +179,11 @@ The following outputs are generated when creating a change request:
 
 | `number`
 | String
-| The unique change request number is auto-generated during change request creation.
+| The unique change request number auto-generated during change request creation.
 
 | `sys_id`
 | String
-| The identifier is auto-generated during change request creation.
+| The identifier auto-generated during change request creation.
 
 | `state`
 | String
@@ -192,7 +192,7 @@ The following outputs are generated when creating a change request:
 |===
 
 
-=== Usage examples: Creating
+=== Usage examples: Create a change request
 
 The following is an example payload for creating a change request using basic authentication:
 
@@ -202,7 +202,7 @@ The following is an example payload for creating a change request using basic au
     steps:
       - name: Create ServiceNow CR with basic auth
         id: create_cr
-        uses: cloudbees-io/service-now@v1
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ secrets.MY_SERVICENOW_USERNAME }}
@@ -213,7 +213,7 @@ The following is an example payload for creating a change request using basic au
 
 ----
 
-If your workflow uses a link:https://docs.cloudbees.com/docs/cloudbees-platform/latest/workflows/manage-workflows#create-trigger[manual trigger], configure input parameters in the format `${{ inputs.MY_PARAMETER }}` and pass them to the action inputs. 
+If your workflow uses a link:https://docs.cloudbees.com/docs/cloudbees-platform/latest/workflows/manage-workflows#create-trigger[manual trigger], you can configure input parameters for the ServiceNow change request fields in the format `${{ inputs.MY_PARAMETER }}`, which can then be passed to the action inputs.
 The following is an example payload for creating a change request using basic authentication and input parameters:
 
 [source,yaml,role="default-expanded"]
@@ -222,7 +222,7 @@ The following is an example payload for creating a change request using basic au
     steps:
       - name: Create ServiceNow CR with manual trigger
         id: create_cr
-        uses: cloudbees-io/service-now@v1
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ secrets.MY_SERVICENOW_USERNAME }}
@@ -241,8 +241,8 @@ If the parameter `validate-blackout-window-conflict` is set to true, the action 
 When this parameter is set to true, you must input both planned start and end dates and times.
 The action checks ServiceNow for the configuration of a blackout window during the planned start and end dates provided in the change request.
 
-* If a blackout window exists during the scheduled dates, the action fails, and the change request is not created.
-* If no blackout window conflict exists, the action creates the change request.
+* If a blackout window exists during the scheduled dates, then the action fails and the change request is not created.
+* If no blackout window conflict is detected, the action then creates the change request.
 
 The following is an example payload for creating a change request using OAuth-based authentication and checking for any blackout windows within the planned change request start and end dates:
 
@@ -252,7 +252,7 @@ The following is an example payload for creating a change request using OAuth-ba
     steps:
       - name: Create ServiceNow CR and check for a blackout window
         id: create_cr
-        uses: cloudbees-io/service-now@v1
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ vars.MY_SERVICENOW_USERNAME }}
@@ -300,12 +300,12 @@ Inputs for the change request functionality are listed below.
 | `username`
 | String
 | Yes
-| The username for authentication.
+| The username used for authentication.
 
 | `password`
 | String
 | Yes
-| The password for authentication.
+| The password used for authentication.
 
 | `client-id`
 | String
@@ -405,7 +405,7 @@ Refer to link:https://www.servicenow.com/docs/bundle/xanadu-api-reference/page/i
 
 === Outputs
 
-Outputs for Update change request functionality are listed below.
+Outputs for the update change request functionality are listed below.
 
 [cols="3a,2a,5a",options="header"]
 .Output details
@@ -417,7 +417,7 @@ Outputs for Update change request functionality are listed below.
 
 | `sys_id`
 | String
-| The identifier used for change request update.
+| The identifier used for change request updates.
 
 | `state`
 | String
@@ -426,14 +426,14 @@ Outputs for Update change request functionality are listed below.
 |===
 
 
-=== Usage example: Updating
+=== Usage example: Update a change request
 
 The following is an example payload for updating a change request using basic authentication:
 
 [source,yaml,role="default-expanded"]
 ----
       - name: Update ServiceNow CR with basic auth
-        uses: cloudbees-io/service-now@v1
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ secrets.MY_SERVICENOW_USERNAME }}
@@ -446,12 +446,12 @@ The following is an example payload for updating a change request using basic au
           additional-parameters : '{"risk_impact_analysis":"Describe the risks here","implementation_plan": "Describe the implementation plan here"}'
 ----
 
-The following is an example referring to the output parameter sys_id from create as input in the update step:
+The following is an example payload referring to the output parameter `sys_id` from the link:https://github.com/cloudbees-io/servicenow/blob/main/README.adoc#create-a-change-request[change request creation] step as input in the update step:
 
 [source,yaml,role="default-expanded"]
 ----
-      - name: Update ServiceNow CR with basic auth
-        uses: cloudbees-io/service-now@v1
+      - name: Update ServiceNow CR with output parameter ref
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ secrets.MY_SERVICENOW_USERNAME }}
@@ -465,14 +465,14 @@ The following is an example referring to the output parameter sys_id from create
 ----
 
 
-=== Usage example: Closing
+=== Usage example: Close a change request
 
 The following is an example payload for closing a change request:
 
 [source,yaml,role="default-expanded"]
 ----
       - name: Close ServiceNow CR with mandatory close fields
-        uses: cloudbees-io/service-now@v1
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ vars.MY_SERVICENOW_USERNAME }}
@@ -487,9 +487,29 @@ The following is an example payload for closing a change request:
 
 ----
 
+The following is an example payload referring to the output parameter `sys_id` from the link:https://github.com/cloudbees-io/servicenow/blob/main/README.adoc#create-a-change-request[change request creation] step as input in the close step:
+
+[source,yaml,role="default-expanded"]
+----
+      - name: Close ServiceNow CR with output parameter ref
+        uses: https://github.com/cloudbees-io/service-now@v1
+        with:
+          url: ${{ vars.SERVICENOW_URL }}
+          username: ${{ secrets.MY_SERVICENOW_USERNAME }}
+          password: ${{ secrets.MY_SERVICENOW_PASSWORD }}
+          client-id: ${{ secrets.MY_CLIENT_ID }}
+          client-secret: ${{ secrets.MY_CLIENT_SECRET }}
+          action-type: "update"
+          sys-id: ${{ fromJSON(steps.create_cr.outputs.servicenow_output).sys_id }}
+          state: "close"
+          close-code: "successful"
+          close-notes: "Change request closed in successful state"
+----
+
 [NOTE]
 ====
-For information about using input parameters in a manually triggered workflow, refer to the xref:README.adoc#create-a-change-request[Create change request usage example].
+
+For information about using input parameters in a manually triggered workflow, refer to the link:https://github.com/cloudbees-io/servicenow/blob/main/README.adoc#create-a-change-request[change request] usage examples.
 
 ====
 
@@ -523,12 +543,12 @@ Inputs for the Get Change request functionality are listed below.
 | `username`
 | String
 | Yes
-| The username for authentication.
+| The username used for authentication.
 
 | `password`
 | String
 | Yes
-| The password for authentication.
+| The password used for authentication.
 
 | `client-id`
 | String
@@ -543,7 +563,7 @@ Inputs for the Get Change request functionality are listed below.
 | `action-type`
 | String
 | Yes
-| The type of operation is "get".
+| The type of operation must be "get".
 
 | `cr-number`
 | String
@@ -555,7 +575,7 @@ Inputs for the Get Change request functionality are listed below.
 
 === Outputs
 
-Outputs for the Get Change request functionality are listed below.
+Outputs for the get change request functionality are listed below.
 
 [cols="3a,2a,5a",options="header"]
 .Output details
@@ -567,11 +587,11 @@ Outputs for the Get Change request functionality are listed below.
 
 | `number`
 | String
-| The CR number for change request.
+| The change request number.
 
 | `sys_id`
 | String
-| The identifier is used to update the change request.
+| The identifier used to update the change request.
 
 | `state`
 | String
@@ -583,7 +603,7 @@ Outputs for the Get Change request functionality are listed below.
 
 |===
 
-=== Usage example: Getting the current state
+=== Usage examples: Get the current state
 
 The following is an example payload with basic authentication to get the current change request state:
 
@@ -593,7 +613,7 @@ The following is an example payload with basic authentication to get the current
     steps:
       - id: get
         name: Get ServiceNow CR state with basic auth
-        uses: cloudbees-io/service-now@v1
+        uses: https://github.com/cloudbees-io/service-now@v1
         with:
           url: ${{ vars.SERVICENOW_URL }}
           username: ${{ vars.MY_SERVICENOW_USERNAME }}
@@ -603,7 +623,7 @@ The following is an example payload with basic authentication to get the current
 
 ----
 
-The following is an example referring to the output parameter number from create  as input in the Get step:
+The following is an example payload referring to the output parameter `number` from the link:https://github.com/cloudbees-io/servicenow/blob/main/README.adoc#create-a-change-request[change request creation] step as input in the get step:
 
 [source,yaml,role="default-expanded"]
 ----
@@ -616,7 +636,7 @@ The following is an example referring to the output parameter number from create
           username: ${{ vars.MY_SERVICENOW_USERNAME }}
           password: ${{ secrets.MY_SERVICENOW_PASSWORD }}
           action-type: "update"
-          sys-id: ${{ fromJSON(steps.get.outputs.servicenow_output).sys_id }}
+          sys-id: ${{ fromJSON(steps.get.outputs.servicenow_output).number }}
           description: "Updated description from CBP workflow"
 
 ----
